...
        button.backgroundColor = .clear
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setImage(UIImage(named: "addButton"), for: .normal)
        button.addTarget(self, action: #selector(pressAddButton), for: .touchUpInside)
        button.layer.cornerRadius = 40
        button.layer.masksToBounds = true
        button.accessibilityIdentifier = "mainScreenAddButton"
        return button
    }()

    // MARK: - Inits
    override func viewDidLoad() {
        super.viewDidLoad()
...
    private func configureNavBar() {
        setupNavigationController()
        navigationItem.title =  NSLocalizedString("Authenticator", comment: "")
        navigationController?.navigationBar.prefersLargeTitles = false

        let settingsButton = UIBarButtonItem(
            image: UIImage(named: "settings"),
            style: .plain,
            target: self,
            action: #selector(settingsTapped))
        settingsButton.tintColor = UIColor.label

        let editButton = UIBarButtonItem(barButtonSystemItem: .edit, target: self, action: #selector(editTapped))
...
