...
                          width: textFieldWidth,
                          height: textFieldHeigth))
        view.addSubview(confirmPasswordTextField)

        // review: в константы
        setupTextField(textField: passwordTextField,
                       placeholderText: NSLocalizedString("Password",
                                                          comment: ""), tag: 1)

        // review: в константы
        setupTextField(
            textField: confirmPasswordTextField,
            placeholderText: NSLocalizedString("Confirm password", comment: ""), tag: 2)

        view.addSubview(confirmButton)
        NSLayoutConstraint.activate([
            confirmButton.topAnchor.constraint(
                equalTo: confirmPasswordTextField.bottomAnchor,
                constant: 48),
...
