...
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitle(NSLocalizedString("Create", comment: ""), for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .medium)
        button.addTarget(self, action: #selector(handleCreate), for: .touchUpInside)
        button.accessibilityIdentifier = "greetingScreenCreateButton"
        button.backgroundColor = UIColor.fucsiaColor
        button.layer.cornerRadius = 25
        return button
    }()

    lazy var loadButton: UIButton = {
...
